--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   bottom_navy_bar: ^6.1.0
   http: ^1.2.2
   shared_preferences: ^2.3.2
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
