--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+<!-- Internet permission -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="music_recommendation_system_flutter_app"
         android:name="${applicationName}"
