--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,10 +80,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+   
+    - family: SourGummy
+      fonts:
+        - asset: SourGummy.ttf
+    - family: Streetwear
+      fonts:
+        - asset: Streetwear.otf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
